// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleB component should render TCP or default variant correctly 1`] = `
<div
  className="undefined parent-wrapper"
>
  <Styled(Row)>
    <Styled(Col)
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
    >
      <ImageBanner
        bannerPosition="overlay"
        linkedImage={
          Array [
            Object {
              "image": Object {
                "alt": "Graphic Tees",
                "crop_d": "c_crop,g_face:center,q_auto:best,w_690,h_577",
                "crop_m": "c_crop,g_face:center,q_auto:best,w_347,h_295",
                "crop_t": "c_crop,g_face:center,q_auto:best,w_354,h_295",
                "title": "Graphic Tees",
                "url": "https://test5.childrensplace.com/image/upload/c_fill,g_face:center,q_auto:best,w_1410/ecom/assets/content/gym/us/home/modA/gym_hp_090519_us_hwlhjb.png",
              },
              "link": Object {
                "action": "",
                "external": 0,
                "target": "",
                "text": "Graphic Tees",
                "title": "Graphic Tees",
                "url": "/c/girl-t-shirts",
              },
            },
          ]
        }
        promoBanner={
          Object {
            "headerText": Array [
              Object {
                "icon": Object {
                  "icon": "",
                  "placement": "",
                },
                "link": Object {
                  "action": "",
                  "external": 0,
                  "target": "",
                  "text": "",
                  "title": "",
                  "url": "/c/girls-denim-bottoms",
                },
                "textItems": Array [
                  Object {
                    "style": "style1",
                    "text": "NEW WASHES.",
                  },
                  Object {
                    "style": "style1",
                    "text": "MORE FITS.",
                  },
                ],
              },
              Object {
                "icon": Object {
                  "icon": "",
                  "placement": "",
                },
                "link": Object {
                  "action": "",
                  "external": 0,
                  "target": "",
                  "text": "",
                  "title": "",
                  "url": "/c/girls-denim-bottoms",
                },
                "textItems": Array [
                  Object {
                    "style": "style2",
                    "text": "SLIM, PLUS & HUSKY",
                  },
                  Object {
                    "style": "style1",
                    "text": "SIZES UP TO 18!",
                  },
                ],
              },
            ],
            "promoBanner": Array [
              Object {
                "link": Object {
                  "action": "",
                  "external": 0,
                  "target": "",
                  "text": "",
                  "title": "",
                  "url": "/c/girls-denim-bottoms",
                },
                "textItems": Array [
                  Object {
                    "style": "small_text_black",
                    "text": "ALL BASIC DENIM",
                  },
                  Object {
                    "style": "currency_up_style",
                    "text": "$ 7 80 & UP",
                  },
                ],
              },
            ],
          }
        }
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    fullBleed={
      Object {
        "desktop": false,
        "medium": false,
        "small": true,
      }
    }
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 6,
          "medium": 4,
          "small": 6,
        }
      }
    >
      <Styled(ButtonList)
        buttonListVariation="stackedCTAList"
        buttonsData={
          Array [
            Object {
              "button": Object {
                "action": "",
                "external": 0,
                "target": "",
                "text": "Girl",
                "title": "Girl",
                "url": "/c/girls-clothing",
              },
              "image": Object {
                "alt": "Girl",
                "crop_d": "",
                "crop_m": "",
                "crop_t": "",
                "title": "Girl",
                "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
              },
            },
            Object {
              "button": Object {
                "action": "",
                "external": 0,
                "target": "",
                "text": "Girl",
                "title": "Girl",
                "url": "/c/girls-clothing",
              },
              "image": Object {
                "alt": "Girl",
                "crop_d": "",
                "crop_m": "",
                "crop_t": "",
                "title": "Girl",
                "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
              },
            },
            Object {
              "button": Object {
                "action": "",
                "external": 0,
                "target": "",
                "text": "Toddler Girl",
                "title": "Toddler Girl",
                "url": "/c/toddler-girl-clothes",
              },
              "image": Object {
                "alt": "Girl",
                "crop_d": "",
                "crop_m": "",
                "crop_t": "",
                "title": "Girl",
                "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
              },
            },
            Object {
              "button": Object {
                "action": "",
                "external": 0,
                "target": "",
                "text": "Boy",
                "title": "Boy",
                "url": "/c/boys-clothing",
              },
              "image": Object {
                "alt": "Girl",
                "crop_d": "",
                "crop_m": "",
                "crop_t": "",
                "title": "Girl",
                "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
              },
            },
            Object {
              "button": Object {
                "action": "",
                "external": 0,
                "target": "",
                "text": "Toddler Boy",
                "title": "Toddler Boy",
                "url": "/c/toddler-boy-clothes",
              },
              "image": Object {
                "alt": "Girl",
                "crop_d": "",
                "crop_m": "",
                "crop_t": "",
                "title": "Girl",
                "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
              },
            },
            Object {
              "button": Object {
                "action": "",
                "external": 0,
                "target": "",
                "text": "Baby",
                "title": "Baby",
                "url": "/c/baby-clothes",
              },
              "image": Object {
                "alt": "Girl",
                "crop_d": "",
                "crop_m": "",
                "crop_t": "",
                "title": "Girl",
                "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
              },
            },
          ]
        }
        className="button-list"
        dataLocatorDivisionImages="moduleB_cta_image_"
        dataLocatorDropDown="moduleB_shop_now_dropdown"
        dataLocatorTextCta="moduleB_cta_links_"
        dropdownLabel="Shop Now"
        dualVariation={
          Object {
            "displayProps": Object {
              "large": true,
              "medium": true,
              "small": false,
            },
            "name": "dropdownButtonCTA",
          }
        }
      />
    </Styled(Col)>
  </Styled(Row)>
</div>
`;

exports[`ModuleB component should render banner bottom variation 1`] = `
<div
  className="banner-bottom-variation"
>
  <div
    className="image-container"
    data-locator="moduleB_image_01"
  >
    <Styled(Anchor)
      action=""
      asPath="/c/girl-t-shirts"
      className="image-link"
      external={0}
      target=""
      text="Graphic Tees"
      title="Graphic Tees"
      to="/c?cid=girl-t-shirts"
      url="/c/girl-t-shirts"
    >
      <WithTheme(DamImage)
        className="image"
        imageConfig="t_mod_B_img_overlay_m"
        imgData={
          Object {
            "alt": "Graphic Tees",
            "crop_d": "c_crop,g_face:center,q_auto:best,w_690,h_577",
            "crop_m": "c_crop,g_face:center,q_auto:best,w_347,h_295",
            "crop_t": "c_crop,g_face:center,q_auto:best,w_354,h_295",
            "title": "Graphic Tees",
            "url": "https://test5.childrensplace.com/image/upload/c_fill,g_face:center,q_auto:best,w_1410/ecom/assets/content/gym/us/home/modA/gym_hp_090519_us_hwlhjb.png",
          }
        }
      />
    </Styled(Anchor)>
  </div>
  <Styled(PromoBanner)
    className="promo-banner"
    data-locator="moduleB_promo_banner"
    dataLocatorHeader="moduleB_header_text"
    headerText={
      Array [
        Object {
          "icon": Object {
            "icon": "",
            "placement": "",
          },
          "link": Object {
            "action": "",
            "external": 0,
            "target": "",
            "text": "",
            "title": "",
            "url": "/c/girls-denim-bottoms",
          },
          "textItems": Array [
            Object {
              "style": "style1",
              "text": "NEW WASHES.",
            },
            Object {
              "style": "style1",
              "text": "MORE FITS.",
            },
          ],
        },
        Object {
          "icon": Object {
            "icon": "",
            "placement": "",
          },
          "link": Object {
            "action": "",
            "external": 0,
            "target": "",
            "text": "",
            "title": "",
            "url": "/c/girls-denim-bottoms",
          },
          "textItems": Array [
            Object {
              "style": "style2",
              "text": "SLIM, PLUS & HUSKY",
            },
            Object {
              "style": "style1",
              "text": "SIZES UP TO 18!",
            },
          ],
        },
      ]
    }
    promoBanner={
      Array [
        Object {
          "link": Object {
            "action": "",
            "external": 0,
            "target": "",
            "text": "",
            "title": "",
            "url": "/c/girls-denim-bottoms",
          },
          "textItems": Array [
            Object {
              "style": "small_text_black",
              "text": "ALL BASIC DENIM",
            },
            Object {
              "style": "currency_up_style",
              "text": "$ 7 80 & UP",
            },
          ],
        },
      ]
    }
    variation="header_and_promo"
  />
</div>
`;

exports[`ModuleB component should render banner overlay variation 1`] = `
<div
  className="banner-overlay-variation"
>
  <div
    className="image-container"
    data-locator="moduleB_image_01"
  >
    <Styled(Anchor)
      action=""
      asPath="/c/girl-t-shirts"
      className="image-link"
      external={0}
      target=""
      text="Graphic Tees"
      title="Graphic Tees"
      to="/c?cid=girl-t-shirts"
      url="/c/girl-t-shirts"
    >
      <WithTheme(DamImage)
        className="image"
        imageConfig="t_mod_B_img_overlay_m"
        imgData={
          Object {
            "alt": "Graphic Tees",
            "crop_d": "c_crop,g_face:center,q_auto:best,w_690,h_577",
            "crop_m": "c_crop,g_face:center,q_auto:best,w_347,h_295",
            "crop_t": "c_crop,g_face:center,q_auto:best,w_354,h_295",
            "title": "Graphic Tees",
            "url": "https://test5.childrensplace.com/image/upload/c_fill,g_face:center,q_auto:best,w_1410/ecom/assets/content/gym/us/home/modA/gym_hp_090519_us_hwlhjb.png",
          }
        }
      />
    </Styled(Anchor)>
  </div>
  <Styled(PromoBanner)
    className="promo-banner"
    data-locator="moduleB_promo_banner"
    dataLocatorHeader="moduleB_header_text"
    headerText={
      Array [
        Object {
          "icon": Object {
            "icon": "",
            "placement": "",
          },
          "link": Object {
            "action": "",
            "external": 0,
            "target": "",
            "text": "",
            "title": "",
            "url": "/c/girls-denim-bottoms",
          },
          "textItems": Array [
            Object {
              "style": "style1",
              "text": "NEW WASHES.",
            },
            Object {
              "style": "style1",
              "text": "MORE FITS.",
            },
          ],
        },
        Object {
          "icon": Object {
            "icon": "",
            "placement": "",
          },
          "link": Object {
            "action": "",
            "external": 0,
            "target": "",
            "text": "",
            "title": "",
            "url": "/c/girls-denim-bottoms",
          },
          "textItems": Array [
            Object {
              "style": "style2",
              "text": "SLIM, PLUS & HUSKY",
            },
            Object {
              "style": "style1",
              "text": "SIZES UP TO 18!",
            },
          ],
        },
      ]
    }
    promoBanner={
      Array [
        Object {
          "link": Object {
            "action": "",
            "external": 0,
            "target": "",
            "text": "",
            "title": "",
            "url": "/c/girls-denim-bottoms",
          },
          "textItems": Array [
            Object {
              "style": "small_text_black",
              "text": "ALL BASIC DENIM",
            },
            Object {
              "style": "currency_up_style",
              "text": "$ 7 80 & UP",
            },
          ],
        },
      ]
    }
    variation="header_and_promo"
  />
</div>
`;

exports[`ModuleB component should render banner top alt variation 1`] = `
<div
  className="banner-top-alt-variation"
>
  <Styled(PromoBanner)
    className="promo-banner"
    data-locator="moduleB_promo_banner"
    dataLocatorHeader="moduleB_header_text"
    headerText={
      Array [
        Object {
          "icon": Object {
            "icon": "",
            "placement": "",
          },
          "link": Object {
            "action": "",
            "external": 0,
            "target": "",
            "text": "",
            "title": "",
            "url": "/c/girls-denim-bottoms",
          },
          "textItems": Array [
            Object {
              "style": "style1",
              "text": "NEW WASHES.",
            },
            Object {
              "style": "style1",
              "text": "MORE FITS.",
            },
          ],
        },
        Object {
          "icon": Object {
            "icon": "",
            "placement": "",
          },
          "link": Object {
            "action": "",
            "external": 0,
            "target": "",
            "text": "",
            "title": "",
            "url": "/c/girls-denim-bottoms",
          },
          "textItems": Array [
            Object {
              "style": "style2",
              "text": "SLIM, PLUS & HUSKY",
            },
            Object {
              "style": "style1",
              "text": "SIZES UP TO 18!",
            },
          ],
        },
      ]
    }
    promoBanner={
      Array [
        Object {
          "link": Object {
            "action": "",
            "external": 0,
            "target": "",
            "text": "",
            "title": "",
            "url": "/c/girls-denim-bottoms",
          },
          "textItems": Array [
            Object {
              "style": "small_text_black",
              "text": "ALL BASIC DENIM",
            },
            Object {
              "style": "currency_up_style",
              "text": "$ 7 80 & UP",
            },
          ],
        },
      ]
    }
    variation="header_and_promo"
  />
  <div
    className="image-container"
    data-locator="moduleB_image_01"
  >
    <Styled(Anchor)
      action=""
      asPath="/c/girl-t-shirts"
      className="image-link"
      external={0}
      target=""
      text="Graphic Tees"
      title="Graphic Tees"
      to="/c?cid=girl-t-shirts"
      url="/c/girl-t-shirts"
    >
      <WithTheme(DamImage)
        className="image"
        imageConfig="t_mod_B_img_overlay_m"
        imgData={
          Object {
            "alt": "Graphic Tees",
            "crop_d": "c_crop,g_face:center,q_auto:best,w_690,h_577",
            "crop_m": "c_crop,g_face:center,q_auto:best,w_347,h_295",
            "crop_t": "c_crop,g_face:center,q_auto:best,w_354,h_295",
            "title": "Graphic Tees",
            "url": "https://test5.childrensplace.com/image/upload/c_fill,g_face:center,q_auto:best,w_1410/ecom/assets/content/gym/us/home/modA/gym_hp_090519_us_hwlhjb.png",
          }
        }
      />
    </Styled(Anchor)>
  </div>
</div>
`;

exports[`ModuleB component should render banner top variation 1`] = `
<div
  className="banner-top-variation"
>
  <Styled(PromoBanner)
    className="promo-banner"
    data-locator="moduleB_promo_banner"
    dataLocatorHeader="moduleB_header_text"
    headerText={
      Array [
        Object {
          "icon": Object {
            "icon": "",
            "placement": "",
          },
          "link": Object {
            "action": "",
            "external": 0,
            "target": "",
            "text": "",
            "title": "",
            "url": "/c/girls-denim-bottoms",
          },
          "textItems": Array [
            Object {
              "style": "style1",
              "text": "NEW WASHES.",
            },
            Object {
              "style": "style1",
              "text": "MORE FITS.",
            },
          ],
        },
        Object {
          "icon": Object {
            "icon": "",
            "placement": "",
          },
          "link": Object {
            "action": "",
            "external": 0,
            "target": "",
            "text": "",
            "title": "",
            "url": "/c/girls-denim-bottoms",
          },
          "textItems": Array [
            Object {
              "style": "style2",
              "text": "SLIM, PLUS & HUSKY",
            },
            Object {
              "style": "style1",
              "text": "SIZES UP TO 18!",
            },
          ],
        },
      ]
    }
    promoBanner={
      Array [
        Object {
          "link": Object {
            "action": "",
            "external": 0,
            "target": "",
            "text": "",
            "title": "",
            "url": "/c/girls-denim-bottoms",
          },
          "textItems": Array [
            Object {
              "style": "small_text_black",
              "text": "ALL BASIC DENIM",
            },
            Object {
              "style": "currency_up_style",
              "text": "$ 7 80 & UP",
            },
          ],
        },
      ]
    }
    variation="header_and_promo"
  />
  <div
    className="image-container"
    data-locator="moduleB_image_01"
  >
    <Styled(Anchor)
      action=""
      asPath="/c/girl-t-shirts"
      className="image-link"
      external={0}
      target=""
      text="Graphic Tees"
      title="Graphic Tees"
      to="/c?cid=girl-t-shirts"
      url="/c/girl-t-shirts"
    >
      <WithTheme(DamImage)
        className="image"
        imageConfig="t_mod_B_img_overlay_m"
        imgData={
          Object {
            "alt": "Graphic Tees",
            "crop_d": "c_crop,g_face:center,q_auto:best,w_690,h_577",
            "crop_m": "c_crop,g_face:center,q_auto:best,w_347,h_295",
            "crop_t": "c_crop,g_face:center,q_auto:best,w_354,h_295",
            "title": "Graphic Tees",
            "url": "https://test5.childrensplace.com/image/upload/c_fill,g_face:center,q_auto:best,w_1410/ecom/assets/content/gym/us/home/modA/gym_hp_090519_us_hwlhjb.png",
          }
        }
      />
    </Styled(Anchor)>
  </div>
</div>
`;
